<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/healthfit" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:layout_marginTop="76dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:textColor="@android:color/holo_blue_light"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="2dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="20dp" />
</LinearLayout>