<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="?attr/cardBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mealIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/food_icon" />

            <TextView
                android:id="@+id/mealTitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                android:id="@+id/mealCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_value"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginEnd="8dp"/>

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="45dp"
                android:layout_height="36dp"
                android:src="@drawable/add"
                android:background="@null"
                android:contentDescription="@string/add_product_icon"
                android:scaleType="centerInside" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_line"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/mealKBJU"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/kbju_format"
                android:textSize="13sp"
                android:textColor="?android:textColorSecondary"/>

            <ImageButton
                android:id="@+id/btnToggle"
                android:layout_width="45dp"
                android:layout_height="28dp"
                android:src="@drawable/arrow_down"
                android:background="@null"
                android:contentDescription="@string/arrow_down_icon"
                android:scaleType="centerInside" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>