<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:windowBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="?android:textColorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/diaryTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/diary_title"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">
                    <TextView
                        android:id="@+id/dayKBJU"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/kbju_format"
                        android:textSize="14sp"
                        android:textColor="?android:textColorSecondary"/>
                    <TextView
                        android:id="@+id/dayCalories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_value"
                        android:textSize="16sp"
                        android:textColor="?android:textColorPrimary"/>
                </LinearLayout>
            </LinearLayout>

            <include android:id="@+id/morningSection" layout="@layout/layout_meal_section" />
            <include android:id="@+id/lunchSection" layout="@layout/layout_meal_section" />
            <include android:id="@+id/dinnerSection" layout="@layout/layout_meal_section" />
            <include android:id="@+id/snackSection" layout="@layout/layout_meal_section" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>